// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#decodeActionCounts parses the action counts correctly 1`] = `
Object {
  "DONT_AGREE": 1,
  "FLAG": 2,
  "FLAG__COMMENT_DETECTED_BANNED_WORD": 1,
  "FLAG__COMMENT_REPORTED_OTHER": 1,
  "REACTION": 3,
}
`;

exports[`#decodeActionCounts parses the action counts correctly 2`] = `
Object {
  "dontAgree": Object {
    "total": 1,
  },
  "flag": Object {
    "reasons": Object {
      "COMMENT_DETECTED_BANNED_WORD": 1,
      "COMMENT_DETECTED_LINKS": 0,
      "COMMENT_DETECTED_NEW_COMMENTER": 0,
      "COMMENT_DETECTED_PREMOD_USER": 0,
      "COMMENT_DETECTED_RECENT_HISTORY": 0,
      "COMMENT_DETECTED_REPEAT_POST": 0,
      "COMMENT_DETECTED_SPAM": 0,
      "COMMENT_DETECTED_SUSPECT_WORD": 0,
      "COMMENT_DETECTED_TOXIC": 0,
      "COMMENT_REPORTED_ABUSIVE": 0,
      "COMMENT_REPORTED_BIO": 0,
      "COMMENT_REPORTED_OFFENSIVE": 0,
      "COMMENT_REPORTED_OTHER": 1,
      "COMMENT_REPORTED_SPAM": 0,
    },
    "total": 2,
  },
  "reaction": Object {
    "total": 3,
  },
}
`;

exports[`#encodeActionCounts generates the action counts correctly 1`] = `
Object {
  "DONT_AGREE": 1,
  "FLAG": 2,
  "FLAG__COMMENT_DETECTED_BANNED_WORD": 1,
  "FLAG__COMMENT_REPORTED_OTHER": 1,
}
`;
